-------------------------------------------------------------------------------
                             wxWidgets Change Log
-------------------------------------------------------------------------------

Note: This file contains the list of changes since wxWidgets 3.x, please see
      docs/changes_30.txt for the changes in the previous versions.


3.1.0: (released 2014-xx-xx)
----------------------------

All (GUI):

- XRC handler for wxAuiToolBar added (Kinaou Hervé).
- Add default ctor and Create() to wxContextHelpButton (Hanmac).